--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
   "homepage": "https://github.com/ajohn893/helloworld#readme",
   "dependencies": {
     "cloudinary": "^1.30.0",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "jquery": "^3.6.0",
     "jsdom": "^19.0.0",
     "multer": "^1.4.5-lts.1",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.21.3",
     "streamifier": "^0.1.1",
     "strip-js": "^1.2.0"
   }
