--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "homepage": "https://github.com/ajohn893/helloworld#readme",
   "dependencies": {
     "cloudinary": "^1.30.0",
-    "dotenv": "^16.0.1:",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "jquery": "^3.6.0",
