--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
   },
   "homepage": "https://github.com/ajohn893/helloworld#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
+    "client-sessions": "^0.8.0",
     "cloudinary": "^1.30.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "jquery": "^3.6.0",
     "jsdom": "^19.0.0",
+    "mongoose": "^6.5.2",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
